fixed mobile view diamonds overflowing text 2

--- a/ui/sass/main.scss
+++ b/ui/sass/main.scss
@@ -85,7 +85,7 @@ body {
 /*
  * Dummy devices (replace them with your own or something else entirely!)
  */
-
+ 
 .product-device {
   position: absolute;
   right: 10%;
@@ -109,6 +109,7 @@ body {
 .dimants2 {background-image: url("/assets/img/dimants-1.svg"); background-repeat: no-repeat; background-size: 50px; background-position: top center;}
 .dimants3 {background-image: url("/assets/img/dimants-2.svg"); background-repeat: no-repeat; background-size: 50px; background-position: 20% 30%;}
 .dimants5 {background-image: url("/assets/img/dimants-2.svg"); background-repeat: no-repeat; background-size: 50px; background-position: top left;}
+.dimants6 {background-image: url("/assets/img/dimants-2.svg"); background-repeat: no-repeat; background-size: 50px; background-position: bottom left;}
 .pogas-teksts{font-size: 32px !important; font-weight: 700; font-style: italic;}
 .dosje-h2{font-weight: 700; font-style: italic;}
 .cleargap {
